# livrome

./: .gitignore  README.md
UI/: PetitsHeros.html  artboard_designsystem.jsx  artboard_flow.jsx  artboard_homepage.jsx  i18n.jsx  primitives.jsx  tokens.css
content/book-01/: manifest.json  script.md
content/book-01/base-scenes/: README.md  scene-notes.md
content/policies/: privacy-policy.html  refund-policy.html  shipping-policy.html  terms-of-service.html
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DECISIONS.md  DISCOUNTS.md  PROGRESS.md  SESSION_LOG.md
preview-api/: .gitignore  README.md  pyproject.toml
preview-api/app/: config.py  gemini_client.py  imagen_client.py  main.py  mock.py  prompts.py  schemas.py
preview-app/: .gitignore  next.config.ts  package-lock.json  package.json
preview-app/app/: globals.css  layout.tsx  page.tsx
preview-app/app/preview/: layout.tsx
preview-app/components/: book-cover.tsx  book-page-spread.tsx  preview-top-bar.tsx  step-stub.tsx
preview-app/lib/: books.ts  preview-state.ts
shopify/theme/assets/: livrome-cookie-consent.js  livrome-tokens.css
shopify/theme/config/: settings_schema.json
shopify/theme/layout/: theme.liquid
shopify/theme/sections/: header-group.json  livrome-404.liquid  livrome-about.liquid  livrome-faq.liquid  livrome-final-cta.liquid  livrome-hero.liquid  livrome-how.liquid  livrome-library.liquid  livrome-track-order.liquid  livrome-trust.liquid  livrome-voices.liquid
shopify/theme/snippets/: livrome-analytics.liquid  livrome-cookie-banner.liquid  livrome-json-ld.liquid
(+14 files in other folders)
